Finalisation de la page de config Ajout des autres machines MVS

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,16 +1,2 @@
-/AfficheurFlux.class
-/GestionConfig.class
-/Launcher.class
-/SmartRobot.class
-/UserInterface$1.class
-/UserInterface$2.class
-/UserInterface$3.class
-/UserInterface$4.class
-/UserInterface$5.class
-/UserInterface$6.class
-/UserInterface$7.class
-/UserInterface$8.class
-/UserInterface.class
-/UserInterface$9.class
-/UserInterfaceConfig.class
-/UserInterface$10.class
+/Tatice-Cristal-Intense-Ok.ico
+/ok-icon.png
