--- a/.classpath
+++ b/.classpath
@@ -2,43 +2,49 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
+	<classpathentry kind="src" path="commons-io-2.4"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="lib" path="forms-1.3.0.jar" sourcepath="forms-1.3.0-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="SwingX/swingx-all-1.6.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/icu4j-3.4.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-1.9.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-1.9.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-1.9.2-lite.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-1.9.2-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-acegisecurity-1.9.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-acegisecurity-1.9.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-acegisecurity-1.9.2-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-hibernate3-1.9.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-hibernate3-1.9.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-hibernate3-1.9.2-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-hibernate4-1.9.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-hibernate4-1.9.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-hibernate4-1.9.2-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-spring2-1.9.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-spring2-1.9.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-spring2-1.9.2-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-spring3-1.9.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-spring3-1.9.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-spring3-1.9.2-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-spring31-1.9.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-spring31-1.9.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-spring31-1.9.2-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-springsecurity2-1.9.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-springsecurity2-1.9.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-springsecurity2-1.9.2-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-springsecurity3-1.9.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-springsecurity3-1.9.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-springsecurity3-1.9.2-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-wicket13-1.9.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-wicket13-1.9.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-wicket13-1.9.2-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-wicket15-1.9.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-wicket15-1.9.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Etienne/Desktop/jasypt-1.9.2/lib/jasypt-wicket15-1.9.2-sources.jar"/>
+	<classpathentry kind="lib" path="Jasypt/icu4j-3.4.4.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-1.9.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-1.9.2-lite.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-1.9.2-sources.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-1.9.2.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-acegisecurity-1.9.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-acegisecurity-1.9.2-sources.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-acegisecurity-1.9.2.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-hibernate3-1.9.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-hibernate3-1.9.2-sources.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-hibernate3-1.9.2.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-hibernate4-1.9.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-hibernate4-1.9.2-sources.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-hibernate4-1.9.2.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-spring2-1.9.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-spring2-1.9.2-sources.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-spring2-1.9.2.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-spring3-1.9.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-spring3-1.9.2-sources.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-spring3-1.9.2.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-spring31-1.9.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-spring31-1.9.2-sources.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-spring31-1.9.2.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-springsecurity2-1.9.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-springsecurity2-1.9.2-sources.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-springsecurity2-1.9.2.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-springsecurity3-1.9.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-springsecurity3-1.9.2-sources.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-springsecurity3-1.9.2.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-wicket13-1.9.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-wicket13-1.9.2-sources.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-wicket13-1.9.2.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-wicket15-1.9.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-wicket15-1.9.2-sources.jar"/>
+	<classpathentry kind="lib" path="Jasypt/jasypt-wicket15-1.9.2.jar"/>
+	<classpathentry kind="lib" path="commons-io-2.4/commons-io-2.4-javadoc.jar"/>
+	<classpathentry kind="lib" path="commons-io-2.4/commons-io-2.4-sources.jar"/>
+	<classpathentry kind="lib" path="commons-io-2.4/commons-io-2.4-test-sources.jar"/>
+	<classpathentry kind="lib" path="commons-io-2.4/commons-io-2.4-tests.jar"/>
+	<classpathentry kind="lib" path="commons-io-2.4/commons-io-2.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
