-Rajout des thread -Toutes les éxécutions se font dans des threads -Gestion RAM de la JVM pour éviter des débordements -Améliorations de l'ergonomie (Lancement centrés, desactivation des zones de saisies durant les enregistrements/chargement. -Corrections de bugs d'encryption.

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,2 @@
-/GestionSocket.class
-/Controlm-icon.png
-/UserInterface$25.class
+/UserInterface$ThreadPing.class
+/UserInterface$ThreadRechargementConfigInterface.class
