Ajout de la pages des parametres + gestion Ajout gestion navigateur par defaut Correction bug avec user saisies MAJ et MIN ajout user windows Ajout des AS400 	-gestion de la config avec save du device name

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,8 @@
-/UserInterface$ThreadPing.class
-/UserInterface$ThreadRechargementConfigInterface.class
+/UserInterfaceConfig$1.class
+/UserInterfaceConfig$2.class
+/UserInterfaceConfig$ThreadChargerConfig.class
+/UserInterfaceParametres.class
+/UserInterface$35.class
+/UserInterfaceParametres$1.class
+/UserInterfaceParametres$ThreadChargementParametres.class
+/UserInterfaceParametres$2.class
